Logout Endpoint, Rename for collision fix
